# frustalz

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  camera_zoom.rs  lib.rs  main.rs  sub_gradient.rs
src/color/: image.rs  mod.rs  sub_gradient.rs
src/fractal/: julia.rs  mandelbrot.rs  mod.rs
src/generate/: date_seed.rs  fractal_info.rs  mod.rs  settings.rs
src/image/: antialiazing.rs  complex_palette.rs  mod.rs  screen_dimensions.rs  sub_gradient.rs
