[package]
edition = "2018"
name = "frustalz"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]

[dependencies]
num-complex = "0.1"
png = "0.11"
palette = "0.3"
rand = "0.4"
rand_derive = "0.3"
pathfinding = "0.7"
rayon = "1.0"
chrono = "0.4"
egg-mode = "0.12"
futures = "0.1"
tokio-core = "0.1"

[dependencies.image]
version = "0.18"
default-features = false
features = ["png_codec"]

[dependencies.structopt]
version = "0.2"
default-features = false
