[package]
edition = "2018"
name = "frustalz"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]

[dependencies]
num-complex = "0.2.1"
png = "0.14.1"
palette = "0.3"
rand = "0.4"
rand_derive = "0.3"
pathfinding = "0.7"
rayon = "1.0.3"
chrono = "0.4.6"
egg-mode = { git = "https://github.com/wezm/twitter-rs.git", branch = "optional-lang" }
futures = "0.1.27"
tokio-core = "0.1.17"

[dependencies.image]
version = "0.21.1"
default-features = false
features = ["png_codec"]

[dependencies.structopt]
version = "0.2.15"
default-features = false
